<resources>
    <string name="app_name">网易新闻</string>
    <string name="action_settings">Settings</string>

    <string name="news">新闻</string>
    <string name="millitary">军事</string>
    <string name="society">社会</string>
    <string name="entertainment">娱乐</string>
    <string name="life">生活</string>
    <string name="science">科技</string>
    <string name="slidinglayout_ID">大盘鸡面排骨面</string>
    <string name="slidinglayout_setting">设置</string>
    <string name="slidinglayout_night_mode">夜间模式</string>
    <string name="slidinglayout_exit">退出</string>
    <string name="slidinglayout_collection">我的收藏</string>
    <string name="slidinglayout_offline">离线阅读</string>
    <string name="slidinglayout_follow">我的跟帖</string>

    <string name="picture">图片</string>
    <string name="movie">电影</string>
    <string name="music">音乐</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage_title">新闻资讯</string>
    <string name="user_login">用户登录</string>
    <string name="share_wechatcircle">微信朋友圈</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_qq">QQ好友</string>


    <string name="sm_item_auth">ShareSDK授权demo</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="close_info_dialog">关闭信息界面</string>
    <string name="login_to_format">登陆到%s</string>
    <string name="remove_to_format">注销%s登录</string>
    <string name="remove_to_format_success">成功移除%s登录信息</string>

    <string name="register_key_user_icon">头像:</string>
    <string name="register_key_user_name">昵称:</string>
    <string name="register_key_user_gender">性别:</string>
    <string name="register_key_user_UID">U I D:</string>
    <string name="register_key_user_mail">邮箱:</string>
    <string name="register_key_user_password">密码:</string>

    <string name="register_user_info">用户信息</string>
    <string name="register_up">注册</string>
    <string name="register_girl">女</string>
    <string name="register_boy">男</string>
    <string name="register_UserID">UserID不能修改</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
</resources>
