<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EDEDED">


    <LinearLayout
        android:id="@+id/three_share_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="true"
        android:weightSum="3">


        <TextView
            android:id="@+id/share_wechat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/share_wechatcircle"
            android:gravity="center"
            android:text="@string/share_wechatcircle"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/share_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/share_wechat"
            android:gravity="center"
            android:text="@string/share_wechat"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/share_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/share_qq"
            android:gravity="center"
            android:text="@string/share_qq"
            android:textColor="#000000"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/share_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/three_share_linear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="16dp"
        android:text="分享到站外"
        android:textSize="8sp" />

</RelativeLayout>